[package]
name = "dani"
version = "0.1.0"
edition = "2021"



[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
expanduser = "1.2.2"
# aws-config = "0.48.0"
# aws-sdk-rdsdata = "0.18.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tabled = "0.8.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"